Preliminary work on frontend, code generator function will be fixed